--- a/contact-us.html
+++ b/contact-us.html
@@ -163,64 +163,58 @@
     <li>1-866-333-5402 (toll free)</li>
   </ul> --> 
 <dl class="dl-horizontal brdr-0">
-            <dt><strong>Telephone number:</strong></dt>
-		<dd>
-              <table class="table">
-                <caption class="wb-inv">
-                Dedicated phone numberes
-                </caption>
-                <thead>
-                  <tr>
-                    <th class="wb-inv" scope="col">Numbers</th>
-                    <th class="wb-inv" scope="col">condition</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>613-960-5359</td>
-                    <td>Ottawa area</td>
-                  </tr>
-                  <tr>
-                    <td>1-866-333-5402</td>
-                    <td>Toll free</td>
-                  </tr>
-        
-                </tbody>
-              </table>
-            </dd>																												 
-            <dt>Hours:</dt>
-            <dd>
-              <table class="table">
-                <caption class="wb-inv">
-                Dedicated hours
-                </caption>
-                <thead>
-                  <tr>
-                    <th class="wb-inv" scope="col">Day</th>
-                    <th class="wb-inv" scope="col">Hours</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>Monday to Friday</td>
-                    <td><strong>9&nbsp;am to 6&nbsp;pm</strong> (local time)</td>
-                  </tr>
-                  <tr>
-                    <td>Saturday</td>
-                    <td>Closed</td>
-                  </tr>
-                  <tr>
-                    <td>Sunday</td>
-                    <td>Closed</td>
-                  </tr>
-                  <tr>
-                    <td colspan="2">Closed on <a href="/en/revenue-agency/services/tax/public-holidays.html">public holidays</a></td>
-                  </tr>
-                </tbody>
-              </table>
-            </dd>
-          </dl>
+  <dt><strong>Telephone:</strong></dt>
+  <dd>
+    <a class="hidden-md hidden-lg nowrap" href="tel:613-960-5393">
+      <span class="fas fa-phone fa-flip-horizontal"></span>613-960-5393 (Ottawa area)
+      <span class="wb-inv"> (opens up phone application)</span>
+    </a>
+    <br>
+    <a class="hidden-md hidden-lg nowrap" href="tel:1-855-333-5402">
+      <span class="fas fa-phone fa-flip-horizontal"></span>1-855-333-540 (Toll free)
+      <span class="wb-inv"> (opens up phone application)</span>
+    </a>
+    <br>
+    <strong class="hidden-xs hidden-sm nowrap">
+      <span class="fas fa-phone fa-flip-horizontal"></span>613-960-5393 (Ottawa area)
+    </strong>
+    <br>
+    <strong class="hidden-xs hidden-sm nowrap">
+      <span class="fas fa-phone fa-flip-horizontal"></span>1-855-333-540 (Toll free)
+    </strong>
+  </dd>
 
+  <dt>Hours:</dt>
+  <dd>
+    <table class="table">
+      <caption class="wb-inv">Dedicated day</caption>
+      <thead>
+        <tr>
+          <th class="wb-inv" scope="col">Day</th>
+          <th class="wb-inv" scope="col">Hours</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Monday to Friday</td>
+          <td><strong>9&nbsp;am to 6&nbsp;pm</strong> (local time)</td>
+        </tr>
+        <tr>
+          <td>Saturday</td>
+          <td>Closed</td>
+        </tr>
+        <tr>
+          <td>Sunday</td>
+          <td>Closed</td>
+        </tr>
+        <tr>
+          <td colspan="2">Closed on <a href="/en/revenue-agency/services/tax/public-holidays.html">public holidays</a></td>
+        </tr>
+      </tbody>
+    </table>
+  </dd>
+</dl>
+																		
   <p><Strong>Email:</Strong><a href="mailto:ATIP-AIPRP@cra-arc.gc.ca">ATIP-AIPRP@cra-arc.gc.ca</a></p>
   	<p>Our ATIP general mailbox representatives can provide you with: </p> 
   <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
