--- a/contact-us.html
+++ b/contact-us.html
@@ -162,32 +162,24 @@
     <li>613-960-5393 (Ottawa area)</li> 
     <li>1-866-333-5402 (toll free)</li>
   </ul> --> 
+
+ 
 <dl class="dl-horizontal brdr-0">
   <dt><strong>Telephone:</strong></dt>
-  <dd>
-    <a class="hidden-md hidden-lg nowrap" href="tel:613-960-5393">
+  <dd style="margin-bottom: 0;">
+    <a class="nowrap" href="tel:6139605393">
       <span class="fas fa-phone fa-flip-horizontal"></span>613-960-5393 (Ottawa area)
-      <span class="wb-inv"> (opens up phone application)</span>
     </a>
     <br>
-    <a class="hidden-md hidden-lg nowrap" href="tel:1-855-333-5402">
+    <a class="nowrap" href="tel:1855333540">
       <span class="fas fa-phone fa-flip-horizontal"></span>1-855-333-540 (Toll free)
-      <span class="wb-inv"> (opens up phone application)</span>
     </a>
-    <br>
-    <strong class="hidden-xs hidden-sm nowrap">
-      <span class="fas fa-phone fa-flip-horizontal"></span>613-960-5393 (Ottawa area)
-    </strong>
-    <br>
-    <strong class="hidden-xs hidden-sm nowrap">
-      <span class="fas fa-phone fa-flip-horizontal"></span>1-855-333-540 (Toll free)
-    </strong>
   </dd>
 
-  <dt>Hours:</dt>
-  <dd>
+  <dt style="margin-top: 5px;"><strong>Hours:</strong></dt>
+  <dd style="margin-bottom: 0;">
     <table class="table">
-      <caption class="wb-inv">Dedicated day</caption>
+      <caption class="wb-inv">Dedicated hours</caption>
       <thead>
         <tr>
           <th class="wb-inv" scope="col">Day</th>
