--- a/contact-us.html
+++ b/contact-us.html
@@ -176,8 +176,8 @@
     </a>
   </dd>
 
-  <dt style="margin-top: 5px;"><strong>Hours:</strong></dt>
-  <dd style="margin-bottom: 0;">
+  <dt style="margin-top: 0;"><strong>Hours:</strong></dt>
+  <dd style="margin-top: -10px; margin-bottom: 0;">
     <table class="table">
       <caption class="wb-inv">Dedicated hours</caption>
       <thead>
@@ -206,6 +206,7 @@
     </table>
   </dd>
 </dl>
+
 																		
   <p><Strong>Email:</Strong><a href="mailto:ATIP-AIPRP@cra-arc.gc.ca">ATIP-AIPRP@cra-arc.gc.ca</a></p>
   	<p>Our ATIP general mailbox representatives can provide you with: </p> 
