--- a/contact-us.html
+++ b/contact-us.html
@@ -157,56 +157,13 @@
 
 		<!-- Second H1 -->
 		<h1 property="name" id="wb-cont" class="gc-thickline">Contact us</h1> 
- <!-- <p><Strong>Telephone:</Strong></p> 
+ <p><Strong>Telephone:</Strong></p> 
   <ul> 
     <li>613-960-5393 (Ottawa area)</li> 
     <li>1-866-333-5402 (toll free)</li>
-  </ul> --> 
+  </ul> 
 
  
-<dl class="dl-horizontal brdr-0">
-  <dt><strong>Telephone:</strong></dt>
-  <dd style="margin-bottom: 0;">
-    <a class="nowrap" href="tel:6139605393">
-      <span class="fas fa-phone fa-flip-horizontal"></span>613-960-5393 (Ottawa area)
-    </a>
-    <br>
-    <a class="nowrap" href="tel:1855333540">
-      <span class="fas fa-phone fa-flip-horizontal"></span>1-855-333-540 (Toll free)
-    </a>
-  </dd>
-
-  <dt style="margin-top: 0;"><strong>Hours:</strong></dt>
-  <dd style="margin-top: -10px; margin-bottom: 0;">
-    <table class="table">
-      <caption class="wb-inv">Dedicated hours</caption>
-      <thead>
-        <tr>
-          <th class="wb-inv" scope="col">Day</th>
-          <th class="wb-inv" scope="col">Hours</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Monday to Friday</td>
-          <td><strong>9&nbsp;am to 6&nbsp;pm</strong> (local time)</td>
-        </tr>
-        <tr>
-          <td>Saturday</td>
-          <td>Closed</td>
-        </tr>
-        <tr>
-          <td>Sunday</td>
-          <td>Closed</td>
-        </tr>
-        <tr>
-          <td colspan="2">Closed on <a href="/en/revenue-agency/services/tax/public-holidays.html">public holidays</a></td>
-        </tr>
-      </tbody>
-    </table>
-  </dd>
-</dl>
-
 																		
   <p><Strong>Email:</Strong><a href="mailto:ATIP-AIPRP@cra-arc.gc.ca">ATIP-AIPRP@cra-arc.gc.ca</a></p>
   	<p>Our ATIP general mailbox representatives can provide you with: </p> 
