--- a/Find-information-is-already-available.html
+++ b/Find-information-is-already-available.html
@@ -180,7 +180,7 @@
           <li><a href="#other">Other information available online</a></li>
         </ul>	
 <h2 id="personal">Access your personal information</h2>
-<p>GO to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">My Account for your:</a></p> 
+<p>You can go to your CRA My Account to find: </a></p> 
   <ul> 
     <li>Personal income tax returns</li>  
     <li>Information slips (for example, T4, T4A, or T5 slips, and RRSP receipts)</li> 
@@ -188,7 +188,8 @@
     <li>Statements of income and deductions for previous tax years </li> 
     <li>COVID-19 support statements including the Canada Emergency Response Benefit (CERB)</li>  
     <li>Personal information, such as your address, direct deposit information and representative authorizations</li>
-  </ul> 
+  </ul>  
+	   <div class="mrgn-tp-md"><a class="btn btn-call-to-action" href="/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">Sign in to CRA My Account</a> <a href="/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html" class="mrgn-lft-md">Register</a></div>
   <p>For a complete list of information you can get through My Account, go to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/about-account.html">About My Account.</a>
 Or call the individual tax enquiries line at 1-800-959-8281 to request tax and benefit documents. 
 </p>  
