--- a/Find-information-is-already-available.html
+++ b/Find-information-is-already-available.html
@@ -195,7 +195,7 @@ Or call the individual tax enquiries line at 1-800-959-8281 to request tax and b
 </p>  
 	
 <h2 id="business">Access your business information </h2>
-<p>GO to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html">My Business Account for your:</a></p> 
+<p>Go to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html">My Business Account for your:</a></p> 
   <ul> 
     <li>Tax returns</li>  
     <li>Corporate account balance</li> 
