--- a/Find-information-is-already-available.html
+++ b/Find-information-is-already-available.html
@@ -191,7 +191,7 @@
   </ul>  
 	   <div class="mrgn-tp-md"><a class="btn btn-call-to-action" href="/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">Sign in to CRA My Account</a> <a href="/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html" class="mrgn-lft-md">Register</a></div>
   <p>For a complete list of information you can get through My Account, go to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals/about-account.html">About My Account.</a>
-Or call the individual tax enquiries line at 1-800-959-8281 to request tax and benefit documents. 
+Or call the individual tax enquiries line at <strong>1-800-959-8281</strong> to request tax and benefit documents. 
 </p>  
 	
 <h2 id="business">Access your business information </h2>
