--- a/requirements-need-to-make-a-request.html
+++ b/requirements-need-to-make-a-request.html
@@ -180,26 +180,19 @@
   <h2 id="eligibility">Requirements for submitting an ATIP request </h2>
   <p>To submit an Access to Information and Privacy (ATIP) request, the necessary documentation will vary based on the type of request and whether you are requesting information for yourself or on behalf of someone else. Please use the drop-down menus provided to select your request type and choose the description that best reflects your situation to learn what you need to provide for the Canada Revenue Agency (CRA) to process your request. 
 </p>  
-<div class="row"><div class="col-md-8"><div class="wb-tabs ignore-session"><div class="tabpanels"><details id="interactive"><summary>Interactive questions</summary><p>A <a href="#text_version">text</a> version is available if needed.</p>
-<h3>Find out which type of owner you are based on your situation</h3>
-<p>Each set of questions applies <strong>separately</strong> to:</p>
-<ul>
-<li>each owner of a residential property (if there is more than one owner)</li>
-<li>each residential property owned (if more than one property is owned)</li>
-</ul>
-<p>Each set of questions <strong>may apply</strong> separately depending on <a href="/en/services/taxes/excise-taxes-duties-and-levies/underused-housing-tax/who-file-pay.html#morecap">if you are the owner of a residential property in more than one capacity</a>.</p>
+<div class="row"><div class="col-md-8"><div class="wb-tabs ignore-session"><div class="tabpanels"><details id="interactive"><summary>Request personal information under Privacy Act (no cost)</summary><p>A <a href="#text_version">text</a> version is available if needed.</p>
 <section class="alert alert-info"><p>The CRA does <strong>not</strong> collect or retain any of the information you enter on this page</p>
-</section><h3 id="h_1_1">Choose the situation that applies to you</h3>
+</section><h3 id="h_1_1">Choose the description that applies to you</h3>
 <p class="text-muted gc-font-2019">Make a selection and <strong>scroll down</strong> for further questions and results.</p>
 <div class="wb-frmvld"><form method="get">
-<div class="wb-fieldflow" data-wb-fieldflow="{&quot;renderas&quot;:&quot;radio&quot;, &quot;gcChckbxrdio&quot;:true, &quot;noForm&quot;: true, &quot;base&quot;: { &quot;live&quot;: true }, &quot;isoptional&quot;: true, &quot;noreqlabel&quot;: true}"><p>Which calendar year are you filing for?</p>
+<div class="wb-fieldflow" data-wb-fieldflow="{&quot;renderas&quot;:&quot;radio&quot;, &quot;gcChckbxrdio&quot;:true, &quot;noForm&quot;: true, &quot;base&quot;: { &quot;live&quot;: true }, &quot;isoptional&quot;: true, &quot;noreqlabel&quot;: true}"><p>Who is requesting the information ? </p>
 <ul>
 <li data-wb-fieldflow="[
                                                 {&quot;action&quot;:&quot;addClass&quot;, &quot;source&quot;: &quot;#res_2022, #unsure, #result&quot;, &quot;class&quot;: &quot;hidden&quot;},
                                                 {&quot;action&quot;:&quot;removeClass&quot;, &quot;source&quot;: &quot;#res_2022, #unsure, #result&quot;, &quot;class&quot;: &quot;visible&quot;},
                                                 {&quot;action&quot;:&quot;addClass&quot;, &quot;source&quot;: &quot;#res_2023&quot;, &quot;class&quot;: &quot;visible&quot;},
                                                 {&quot;action&quot;:&quot;removeClass&quot;, &quot;source&quot;: &quot;#res_2023&quot;, &quot;class&quot;: &quot;hidden&quot;}
-                                                ]">2023<div class="wb-fieldflow-sub" data-wb-fieldflow="{&quot;renderas&quot;:&quot;radio&quot;, &quot;gcChckbxrdio&quot;:true, &quot;noreqlabel&quot;: true}"><div class="wb-fieldflow-header"><p class="wb-fieldflow-label">Do you own the residential property as a partner of a partnership?</p>
+                                                ]">an individual requesting for myself <div class="wb-fieldflow-sub" data-wb-fieldflow="{&quot;renderas&quot;:&quot;radio&quot;, &quot;gcChckbxrdio&quot;:true, &quot;noreqlabel&quot;: true}"><div class="wb-fieldflow-header"><p class="wb-fieldflow-label">Are you currently or previously an employee of the Canada Revenue Agency (CRA)?</p>
 <details><summary>What is a partnership?</summary><p>For UHT purposes, in all parts of Canada (other than Quebec), the CRA interprets the term partnership to mean the relationship that exists between persons carrying on a business in common with a view to profit.</p>
 <details><summary>Partnerships constituted in Quebec</summary><p>For partnerships constituted in Quebec, the CRA interprets the term partnership based on the legal definition of contract of partnership in the Civil Code of Quebec:</p>
 <blockquote>“A contract of partnership is a contract by which the parties, in a spirit of cooperation, agree to carry on an activity, including the operation of an enterprise, to contribute thereto by combining property, knowledge or activities and to share among themselves any resulting pecuniary profits”</blockquote>
