--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 	<aside>
 		   <h2 id="resource" class="h3">Related information</h2>
 		   <ul>
-			 <li><a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/frequently-asked-questions.html">Frequently asked questions</a></li>  
+			 <li><a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/frequently-asked-questions.html"><s>Frequently asked questions</s></a></li>  
 			 <li><a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/your-rights-under-access-information-act-privacy-act.html">Your rights under the Access to Information Act and Privacy Act</a></li>  
 			<li><a href="https://www.canada.ca/en/revenue-agency/services/about-canada-revenue-agency-cra/protecting-your-privacy/privacy-impact-assessment.html">Privacy impact assessment</a></li>  
 			<li><a href="https://www.canada.ca/en/revenue-agency/corporate/privacy-notice.html">Privacy notice</a></li>  
