--- a/requirements-need-to-make-a-request.html
+++ b/requirements-need-to-make-a-request.html
@@ -164,12 +164,12 @@
 </section> 
   <h2 class="h3">On this page</h2>
         <ul>
-          <li><a href="#eligibility">Are you eligible?</a></li>
+          <li><a href="#eligibility">Eligibility</a></li>
           <li><a href="#requirements">Requirements for submitting an ATIP request </a></li> 
         </ul>	
 
 
-<h2 id="eligibility">Are you eligible?</h2>
+<h2 id="eligibility">Eligibility</h2>
 <p>To make a request, you must be one of the following:</p> 
   <ul> 
     <li>a Canadian citizen</li>  
