--- a/requirements-need-to-make-a-request.html
+++ b/requirements-need-to-make-a-request.html
@@ -180,7 +180,7 @@
   <h2 id="eligibility">Requirements for submitting an ATIP request </h2>
   <p>To submit an Access to Information and Privacy (ATIP) request, the necessary documentation will vary based on the type of request and whether you are requesting information for yourself or on behalf of someone else. Please use the drop-down menus provided to select your request type and choose the description that best reflects your situation to learn what you need to provide for the Canada Revenue Agency (CRA) to process your request. 
 </p>  
-<div class="row"><div class="col-md-8"><div class="wb-tabs ignore-session"><div class="tabpanels"><details id="interactive"><summary>Request personal information under Privacy Act (no cost)</summary><p>A <a href="#text_version">text</a> version is available if needed.</p>
+<div class="row"><div><div class="wb-tabs ignore-session"><div class="tabpanels"><details id="interactive"><summary>Request personal information under Privacy Act (no cost)</summary><p>A <a href="#text_version">text</a> version is available if needed.</p>
 <section class="alert alert-info"><p>The CRA does <strong>not</strong> collect or retain any of the information you enter on this page</p>
 </section><h3 id="h_1_1">Choose the description that applies to you</h3>
 <p class="text-muted gc-font-2019">Make a selection and <strong>scroll down</strong> for further questions and results.</p>
