--- a/Find-information-is-already-available.html
+++ b/Find-information-is-already-available.html
@@ -185,7 +185,7 @@
     <li>Personal income tax returns</li>  
     <li>Information slips (for example, T4, T4A, or T5 slips, and RRSP receipts)</li> 
     <li>Notices of assessment or reassessment</li>  
-    <li>Statements of income and deductions for previous tax years </li> 
+    <li>Statements of income and deductions from the past 3 assessed years </li> 
     <li>COVID-19 support statements including the Canada Emergency Response Benefit (CERB)</li>  
     <li>Personal information, such as your address, direct deposit information and representative authorizations</li>
   </ul>  
@@ -195,13 +195,14 @@ Or call the individual tax enquiries line at <strong>1-800-959-8281</strong> to 
 </p>  
 	
 <h2 id="business">Access your business information </h2>
-<p>Go to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html">My Business Account for your:</a></p> 
+<p>Go to My Business Account for your:</p> 
   <ul> 
     <li>Tax returns</li>  
     <li>Corporate account balance</li> 
     <li>Account transactions</li>  
     <li>notices of assessment or reassessment</li>
-  </ul> 
+  </ul>  
+<div class="mrgn-tp-md"><a class="btn btn-call-to-action" href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account.html">Sign in to CRA My Business Account</a> <a href="/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html" class="mrgn-lft-md">Register</a></div>
   <p>For a complete list of information you can get through My Business Account, go to <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-businesses/business-account/what-on-business-account.html"></a>What can I do on my Business Account.
 Or call the business enquiries line at 1-800-959-5525 to request corporate income tax documents.  
 </p> 
