--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@
 
 	<p>The Canada Revenue Agency (CRA) must follow the requirements set by the <a href="https://laws-lois.justice.gc.ca/eng/acts/a-1/">Access to Information Act </a> 
 	and the <a href="https://laws-lois.justice.gc.ca/eng/acts/P-21/">Privacy Act</a> ,ensuring public access to government records and personal information. The Access to Information and Privacy (ATIP) Directorate, part of the Public Affairs Branch, supports the CRA in meeting its requirements under both acts.</p>
-  <section class="alert alert-info">
+  <!-- <section class="alert alert-info">
   <h3>What's new</h3>
   <p>The Canada Revenue Agency (CRA) is updating its process for handling representatives’ access to information and privacy (ATIP) requests <a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/changes-access-information-privacy-requests-canada-revenue-agency.html">Changes to access to information and privacy requests at the Canada Revenue Agency.</a></p>
-</section>
+</section> -->
 <!-- Navigation menu -->
 		<nav class="gc-subway provisional">
 			<h2>Sections</h2>
