--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 				<dt><a href="https://cra-proto.github.io/ATIP-request-prototype/what is Access to information and privacy at CRA.html">What is Access to information and Privacy at CRA </a></dt>
 				<dd>Description of Access to information and Privacy at CRA</dd>
 				
-				<dt><a href="https://cra-proto.github.io/ATIP-request-prototype/Find-information-is-already-available.html">Find information already available </a></dt>
+				<dt><a href="https://cra-proto.github.io/ATIP-request-prototype/Find-information-is-already-available.html">Find information that is already available </a></dt>
 				<dd>Access personal information and public records online  </dd>
 				
 				<dt><a href="https://cra-proto.github.io/ATIP-request-prototype/requirements-need-to-make-a-request.html">What you will need to make a request</a></dt>
