Update what is Access to information and privacy at CRA.html

--- a/what is Access to information and privacy at CRA.html
+++ b/what is Access to information and privacy at CRA.html
@@ -147,7 +147,7 @@
 			<h1>Access to information and privacy at the Canada Revenue Agency  </h1>
 			<ul>
 				<li><a href="#" class="active">What is Access to information and Privacy at CRA </a></li>
-        			<li><a href="https://cra-proto.github.io/ATIP-request-prototype/Find-information-is-already-available.html">Find information is already available </a></li>
+        			<li><a href="https://cra-proto.github.io/ATIP-request-prototype/Find-information-is-already-available.html">Find information that is already available </a></li>
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/requirements-need-to-make-a-request.html">What you will need to make a request</a></li>
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/how-to-submit-an-ATIP-request.html">How to submit an ATIP request</a></li>
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/ways-to-receive.html">Ways to receive requested records</a></li>
@@ -178,7 +178,7 @@
 		<nav class="gc-subway-pagination">
 			<h2 class="wb-inv">Document navigation</h2>
 			<ul class="pager">
-				<li class="next"><a href="https://cra-proto.github.io/ATIP-request-prototype/Find-information-is-already-available.html" rel="next"><span class="wb-inv">Next: </span>Find information is already available</a></li>
+				<li class="next"><a href="https://cra-proto.github.io/ATIP-request-prototype/Find-information-is-already-available.html" rel="next"><span class="wb-inv">Next: </span>Find information that is already available</a></li>
 			</ul>
 		</nav>
     <div class="mwsgeneric-base-html parbase section">
