--- a/Find-information-is-already-available.html
+++ b/Find-information-is-already-available.html
@@ -156,7 +156,7 @@
 	    </nav>
 
 		<!-- Second H1 -->
-		<h1 property="name" id="wb-cont" class="gc-thickline">Find information is already available</h1> 
+		<h1 property="name" id="wb-cont" class="gc-thickline">Find information that is already available</h1> 
 	<p>You can get many types of information from the Canada Revenue Agency (CRA) without the need for a formal information request, including: </p> 
   <ul class="fa-ul">
 			<li><span class="fas fa-check text-success fa-li" aria-hidden="true"></span>Copies of individual’s tax slips </li>
