--- a/requirements-need-to-make-a-request.html
+++ b/requirements-need-to-make-a-request.html
@@ -147,7 +147,7 @@
 			<h1>Access to information and privacy at the Canada Revenue Agency  </h1>
 			<ul>
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/what is Access to information and privacy at CRA.html">What is Access to information and Privacy at CRA </a></li>
-        			<li><a href="https://cra-proto.github.io/ATIP-request-prototype/Find-information-is-already-available.html">Find information is already available </a></li>
+        			<li><a href="https://cra-proto.github.io/ATIP-request-prototype/Find-information-is-already-available.html">Find information that is already available </a></li>
 				<li><a href="#" class="active">What you will need to make a request</a></li>
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/how-to-submit-an-ATIP-request.html">How to submit an ATIP request</a></li>
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/ways-to-receive.html">Ways to receive requested records</a></li>
@@ -157,7 +157,7 @@
 
 		<!-- Second H1 -->
 		<h1 property="name" id="wb-cont" class="gc-thickline">What you will need to make a request </h1> 
-	<p>If you can’t find the information you are looking for at <a href=" https://cra-proto.github.io/ATIP-request-prototype/Find-information-is-already-available.html">Find information already available</a> , make a formal request through the Access to Information Act or Privacy Act. Please note this process may take at least 30 days and there is a $5 fee for requests under the Access to Information Act, but there is no fee for requests for personal information under the Privacy Act.</p>  
+	<p>If you can’t find the information you are looking for at <a href=" https://cra-proto.github.io/ATIP-request-prototype/Find-information-is-already-available.html">Find information that is already available</a> , make a formal request through the Access to Information Act or Privacy Act. Please note this process may take at least 30 days and there is a $5 fee for requests under the Access to Information Act, but there is no fee for requests for personal information under the Privacy Act.</p>  
   <section class="alert alert-info">
   <h3>New process for representatives requesting income statements from the last 3 years, notices of assessment, and benefits information</h3>
  <p>Effective <strong>September 10, 2024</strong>, the CRA is updating its process. The ATIP Directorate will no longer process your requests for your client’s income statements from the last 3 years, notices of assessment, and benefits information. Your client can get this information through <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/account-individuals.html">My Account</a>  or <a href="https://www.canada.ca/en/revenue-agency/services/e-services.html">other CRA services</a>. For more information about these changes, go to <a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/changes-access-information-privacy-requests-canada-revenue-agency.html">Changes to access to information and privacy requests at the Canada Revenue Agency</a>.</p>
