--- a/what is Access to information and privacy at CRA.html
+++ b/what is Access to information and privacy at CRA.html
@@ -4,7 +4,7 @@
    <head>
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta charset="utf-8">
-      <title>What is Access to information and Privacy at CRA - Canada.ca</title>
+      <title>What is Access to information and Privacy (ATIP) - Canada.ca</title>
       <meta content="width=device-width,initial-scale=1" name="viewport"/>
       
 	<link rel="schema.dcterms" href="http://purl.org/dc/terms/"/>
