Update what is Access to information and privacy at CRA.html

--- a/what is Access to information and privacy at CRA.html
+++ b/what is Access to information and privacy at CRA.html
@@ -130,9 +130,9 @@
   <div class="container">
     <ol class="breadcrumb">
       <li><a href="https://www.canada.ca/en.html">Canada.ca</a></li>
-      <li><a href="https://www.canada.ca/en/services/taxes.html">Canada Revenue Agency</a></li>
-      <li><a href="https://www.canada.ca/en/services/taxes/income-tax.html">Transparency</a></li>
-      <li><a href="https://www.canada.ca/en/services/taxes/income-tax/corporation-income-tax.html">Access to information and privacy</a></li>
+      <li><a href="https://www.canada.ca/en/revenue-agency.html">Canada Revenue Agency</a></li>
+      <li><a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/transparency-proactive-disclosure-canada-revenue-agency.html">Transparency</a></li>
+      <li><a href="https://www.canada.ca/en/revenue-agency/corporate/about-canada-revenue-agency-cra/access-information-privacy-canada-revenue-agency/request-information-canada-revenue-agency.html">Request information from the Canada Revenue Agency</a></li>
     </ol>
   </div>
 </nav>
@@ -144,32 +144,32 @@
 <main role="main" property="mainContentOfPage" class="container">
 <!-- Navigation menu and first H1 -->
 		<nav class="gc-subway provisional">
-			<h1>Access to information and privacy at the Canada Revenue Agency  </h1>
+			<h1>Access to information and privacy (ATIP) - CRA  </h1>
 			<ul>
-				<li><a href="#" class="active">What is Access to information and Privacy at CRA </a></li>
-        			<li><a href="https://cra-proto.github.io/ATIP-request-prototype/Find-information-is-already-available.html">Find information that is already available </a></li>
-				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/requirements-need-to-make-a-request.html">What you will need to make a request</a></li>
-				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/how-to-submit-an-ATIP-request.html">How to submit an ATIP request</a></li>
+				<li><a href="#" class="active">What is Access to information and Privacy (ATIP) </a></li>
+        			<li><a href="https://cra-proto.github.io/ATIP-request-prototype/Find-information-is-already-available.html">Find information that is available without an ATIP requset </a></li>
+				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/requirements-need-to-make-a-request.html">Get ready to make a request</a></li>
+				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/how-to-submit-an-ATIP-request.html">How to send an ATIP request</a></li>
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/ways-to-receive.html">Ways to receive requested records</a></li>
 				<li><a href="https://cra-proto.github.io/ATIP-request-prototype/contact-us.html">Contact us</a></li>
 			</ul>
 	    </nav>
 
 		<!-- Second H1 -->
-		<h1 property="name" id="wb-cont" class="gc-thickline">What is Access to information and Privacy at CRA </h1> 
-	<p>The Canada Revenue Agency  (CRA) is guided by the <a class="wb-lbx" role="button" aria-controls="AIA" href="#AIA">Access to Information Act<span class="mrgn-lft-sm far fa-question-circle"></span></span></a> and the <a class="wb-lbx" role="button" aria-controls="PA" href="#PA">Privacy Act<span class="mrgn-lft-sm far fa-question-circle"></span></span></a>, which provide frameworks for public access to information and personal data protection.</p>
-<section id="AIA" class="mfp-hide modal-dialog modal-content overlay-def">
-			<header class="modal-header"><h2 class="modal-title">Access to information Act</h2></header>
-			<div class="modal-body">
-			<p>This Act allows individuals to request records from federal institution. It aims to enhance openness and accountability by providing the public with the means to obtain information about government activities, other than personal data, which is not readily available. </p>
-			</div>
-		</section>  
-<section id="PA" class="mfp-hide modal-dialog modal-content overlay-def">
-			<header class="modal-header"><h2 class="modal-title">Privacy Act</h2></header>
-			<div class="modal-body">
-			<p>The Privacy Act governs how federal institutions handle personal information. It ensures that individuals have the right to access personal information held by the government and sets strict controls on how this information is collected, used, disclosed, and disposed of.    </p>
-			</div>
-		</section> 
+		<h1 property="name" id="wb-cont" class="gc-thickline">What is Access to information and Privacy (ATIP)</h1> 
+	<p>ATIP is a process that allows public access to information about government activities, and protection and access to personal data collected by the CRA and other government institutions.</p>
+
+	<h2>Access to information</h2> 
+	<p>The Access to Information Act allows individuals to request records from federal institutions. It aims to enhance openness and accountability by providing the public with a process to obtain information about <b>government activities</b> that is not readily available. </p> 
+	<p>You can access many types of information about government activities without sending a formal access to information request. </p> 
+	<p>There is a <b>$5 fee</b> for access to information requests. </p> 
+	<p>The process may take <b>at least 30 days.</b></p> 
+
+	<h2>Privacy</h2> 
+	<p>The Privacy Act governs how federal institutions handle personal information. It ensures that individuals have the right to access <b>personal information</b> held by the government and sets strict controls on how this information is collected, used, disclosed, and disposed of.  </p> 
+	<p>You can access a lot of your personal information without sending a formal personal information request.</p> 
+	<p>There is <b>no fee</b> for personal information requests. </p> 
+	<p>The process may take <b>at least 30 days.</b></p>
 
 <p>Before making a formal request, please check if the information you need is already accessible through CRA online services. Typically, this is the <strong>quickest</strong> way to obtain the information you require. </p> 
 <p>If the information your need isn’t available, make an access to information or personal information request. Please note this process may take <strong>at least 30 days</strong> and there is a $5 fee for request under the Access to Information Act.</p>
